68518 fix issue with product grid item display on safari

--- a/Snowdog_Components/components/Organisms/product-grid-item/_product-grid-item.scss
+++ b/Snowdog_Components/components/Organisms/product-grid-item/_product-grid-item.scss
@@ -9,6 +9,7 @@
     border: $product-grid-item__border;
     border-width: $product-grid-item__border-width;
     padding: $product-grid-item__padding;
+    display: -webkit-box; // sass-lint:disable-line no-vendor-prefixes
     @include darken-layout-hover('.product-grid-item__image-wrapper');
 
     @include isIE() {
